5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1582_1331.log
== TEST (2019-04-17 16:38:22) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:38:24) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- EXECUTION TIME:
0.12778
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:38:25) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:38:26) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- EXECUTION TIME:
0.130986
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:38:26) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:38:28) 
-- CODE:
pagGuerreiros = 50 / 4

print (pagGuerreiros)


-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:46:15) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:46:16) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- EXECUTION TIME:
0.163356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:46:28) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:47:32) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0)
-- ERROR:
File "XXXX", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:47:34) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0)
-- EXECUTION TIME:
0.126325
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:47:35) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0)
-- ERROR:
File "XXXX", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:47:45) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:47:46) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0))
-- EXECUTION TIME:
0.146351
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:47:48) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:47:49) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (round(moedasInformante, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:26) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:48:27) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- EXECUTION TIME:
0.207952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:28) 
-- CODE:
moedasG = int(input(45/3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45/3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:41) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:48:43) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- EXECUTION TIME:
0.165715
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:44) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = 5
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:54) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:48:55) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- EXECUTION TIME:
0.216729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:48:56) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:48:57) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(50 - moedasG))
print (moedasInformante)
-- EXECUTION TIME:
0.118464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:49:20) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(moedasG-50))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:49:21) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(moedasG-50))
print (moedasInformante)
-- EXECUTION TIME:
0.199414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:49:22) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInformante = int(input(moedasG-50))
print (moedasInformante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:49:44) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - moedasG))
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:49:45) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - moedasG))
print (moedasInf)
-- EXECUTION TIME:
0.139946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:49:46) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - moedasG))
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:50:10) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 5
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:50:11) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 5
print (moedasInf)
-- EXECUTION TIME:
0.161986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:50:12) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 5
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:50:13) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 5
print (moedasInf)
-- EXECUTION TIME:
0.13421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:50:41) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 50 - moedasG
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:50:42) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 50 - moedasG
print (moedasInf)
-- EXECUTION TIME:
0.157648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:50:51) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 50 - 45
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:50:52) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = 50 - 45
print (moedasInf)
-- EXECUTION TIME:
0.163905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:05) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(50 - 45)
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:51:06) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(50 - 45)
print (moedasInf)
-- EXECUTION TIME:
0.181678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:19) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - 45))
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:51:21) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - 45))
print (moedasInf)
-- EXECUTION TIME:
0.183948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:21) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasInf = int(input(50 - 45))
print (moedasInf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:32) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = int(input(50 - 45))
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:51:34) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = int(input(50 - 45))
print (moedasI)
-- EXECUTION TIME:
0.190319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:34) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = int(input(50 - 45))
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:51:50) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = int(input(50-45))
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:51:51) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = int(input(50-45))
print (moedasI)
-- EXECUTION TIME:
0.131757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:52:41) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)
total = 50
moedasI = int(input(total - moedasG))
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:52:42) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)
total = 50
moedasI = int(input(total - moedasG))
print (moedasI)
-- EXECUTION TIME:
0.215693
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:52:52) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)
total = 50
moedasI = (total - moedasG)
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:52:53) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)
total = 50
moedasI = (total - moedasG)
print (moedasI)
-- EXECUTION TIME:
0.168686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 16:53:15) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = 5
print (moedasI)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 16:53:17) 
-- CODE:
moedasG = int(input(45//3))
print (moedasG)

moedasI = 5
print (moedasI)
-- EXECUTION TIME:
0.142539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 1, in <module>
    moedasG = int(input(45//3))
ValueError: invalid literal for int() with base 10: 'xx'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 17:03:45) 
-- CODE:

print (50//3)


print (50-16*3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 17:03:47) 
-- CODE:

print (50//3)


print (50-16*3)
-- EXECUTION TIME:
0.176962
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
